welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:51: error: Unmatched closing brace '}' ignored here
}
^